--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -514,15 +514,27 @@
       position: static
     &-wrap
       position: static
+      width: 100%
     &__title
       font-size: 28px
       line-height: 36px
       text-align: center
       margin-bottom: 40px
     &-slider
-      width: 205px
+      display: flex
+      align-items: center
+      min-width: 230px
+      max-width: 230px
+      padding-left: 15px
+      margin: auto
       &__wrapper
+        // max-width: 205px
+        width: 100%
+
       &__slide
+        max-width: 205px
+        max-height: 300px
+        
       &__img
         width: 100%
     &-button
